YelpCamp/v4/readme.md
# YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all Campgrounds

Each Campgrounds has:
* Name
* Image

# Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap

# Creating New Campgrounds
* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic Unstyled form

# Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

# Style the Navber and Form
* Add a navbar to all templates
* Style the new campground form

# Add Mongoose
* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes!

# Show Page
* Review the RESTful routes we've seen so far
* Add description to our campground model
* Show db.collection.drop()
* Add a show route/template
*

# Refactor Mongoose Code
* Create a models Directory
* Use module.exports
* Require everything correctly

# Add Seeds File
* Add a seed.js file
* Run the seeds file every time the server starts

# Add the comment model!
* Make our errors go away!
* Display comments on campground show page

# Comment New/Create
* Discuss nested routes
* Add The comment new and create routes
* Add the new comment form

## Nested routes for comments
* NEW       campgrounds/:id/comments/new    GET
* CREATE    campgrounds/:id/comments        POST